# gen-ai-rag-bot

./: .gitignore  langchain-demo.ipynb  langchain-rag-2.ipynb  langchain-rag.ipynb  pyproject.toml  readme.md  requirements.txt
api/: agent.py  init_llm.py  llm_graph.py  main.py  models.py  requests.http  system_prompt.txt  test_prompts.txt
api/documents/markdown/: garantia_produselor.md  livrarea_comenzilor.md  returul_unui_produs.md
bot-ui/: package-lock.json  package.json
bot-ui/app/: layout.tsx  page.tsx
langchain-demo/: langchain-0.3-rag.ipynb  langchain-1.2-rag.ipynb  langchain-demo.ipynb  langchain-rag-2.ipynb  langchain-rag.ipynb
notebooks/: langchain-1.2-rag.ipynb  rag-pdf.ipynb
